added transaction history

--- a/home.html
+++ b/home.html
@@ -51,9 +51,22 @@
                 <div id="form-transaction" class="card-body hidden">
                     <h2 class="text-2xl font-bold text-center">Transaction History</h2>
                     <div class="divider"></div>
-                    <div>
-                        <!-- transaction content here -->
-                        
+                    <!-- transaction content here -->
+                    <div id="transaction-content">
+                        <!-- add money history here -->
+                        <div>
+                            <h2 class="font-bold text-xl text-blue-400">Add Money History</h2>
+                            <div id="add-money-history" class="space-y-4">
+
+                            </div>
+                        </div>
+                        <!-- cashout history here -->
+                        <div class="mt-5">
+                            <h2 class="font-bold text-xl text-blue-400">Cash Out History</h2>
+                            <div id="cash-out-history" class="space-y-4">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
